chore: release v2.18.0
- Update CHANGELOG with visitor pattern feature and bug fixes
- Bump version to 2.18.0 across all packages
- Add .mailmap for consistent author attribution
- Fix mypy errors in test files
- Fix java:update task to use system Maven
- Update dependencies across all languages